--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,21 +1,21 @@
+name: Node.js CI
 
-name: Super-Linter
-
-on: 
+on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  super-lint:
-    name: Lint code base
+  build:
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3.3.0
-      - name: Run Super-Linter
-        uses: github/super-linter@v4.10.1
       - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
@@ -24,9 +24,3 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-  
-        
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
