--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,26 +1,30 @@
-name: Node.js CI
+default:
+  interruptible: false
+  image: node:18.14.2
+  before_script:
+    - npm install
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+stages:          # List of stages for jobs, and their order of execution
+  - build
+  - test
+  - deploy
 
-jobs:
-  build:
+build-job:       # This job runs in the build stage, which runs first.
+  stage: build
+  script:
+      - npm run build
 
-    runs-on: ubuntu-latest
+unit-test-job:   # This job runs in the test stage.
+  stage: test    # It only starts when the job in the build stage completes successfully.
+  script:
+    - npm run test
 
-    strategy:
-      matrix:
-        node-version: [14.x, 15.x]
+deploy-job:      # This job runs in the deploy stage.
+  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
+  environment: production
+  script:
+    - npm run build
+    - npm install netlify-cli -g
+    - netlify deploy --prod --dir=./dist --site=$NETLIFY_SITE
 
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+# asdawd
